fix layout for projects on mobile

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -106,6 +106,9 @@ header {
     font-weight: 400;
     font-size: 1.5rem;
     line-height: 2.2rem; }
+    @media (max-width: 600px) {
+      .heading-tertiary--sub {
+        margin-bottom: 1.5rem; } }
 
 .project__text {
   line-height: 2.5rem;
@@ -119,6 +122,9 @@ header {
 
 .project__icon {
   font-size: 4rem; }
+  @media (max-width: 600px) {
+    .project__icon {
+      font-size: 3.5rem; } }
   .project__icon:not(:first-child) {
     padding-left: 1rem; }
 
@@ -439,14 +445,14 @@ header {
       .project__links {
         width: 100%;
         display: block; } }
-  .project__links--mobile {
-    width: 100%;
-    text-align: center;
-    display: none; }
-    @media (max-width: 931px) {
-      .project__links--mobile {
-        display: block;
-        margin: 3.5rem 0 5rem 0; } }
+    .project__links--mobile {
+      width: 100%;
+      text-align: center;
+      display: none; }
+      @media (max-width: 931px) {
+        .project__links--mobile {
+          display: block;
+          margin: 3.5rem 0 5rem 0; } }
   .project__link {
     display: inline-block;
     text-align: center;
