--- a/src/sass/base/_typography.scss
+++ b/src/sass/base/_typography.scss
@@ -103,6 +103,10 @@ header {
     font-weight: 400;
     font-size: 1.5rem;
     line-height: 2.2rem;
+
+    @include respond($respond-nav-collapse) {
+      margin-bottom: 1.5rem;
+    }
   }
 }
 
@@ -117,6 +121,10 @@ header {
   }
   &__icon {
     font-size: 4rem;
+
+    @include respond($respond-nav-collapse) {
+      font-size: 3.5rem;
+    }
 
     &:not(:first-child) {
       padding-left: 1rem;
